@@ -4,7 +4,8 @@ SUBDIRS =
 
 @INTLTOOL_DESKTOP_RULE@
 desktopdir=$(datadir)/applications
-desktop_in_files = nwam-manager-properties.desktop.in
+desktop_in_files = nwam-manager-properties.desktop.in	\
+	nwam-network.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 
 %.in: %.in.in
