@@ -1,3 +1,9 @@
+2010-02-08  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* data/Makefile.am:
+	* data/nwam-network.desktop.in: Fixed 14419 System>Administration>
+	Network would open the NWAM Network Preferences dialog.
+
 2010-02-05  Lin Ma  <Lin.Ma@Sun.COM>
 
 	* common/nwamui_daemon.c (dispatch_scan_results_from_wlan_array):
